--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,36 @@
 <html lang="en">
 
 <head>
- 
- 
- 
- window.adobeDataLayer = window.adobeDataLayer || [];
-window.adobeDataLayer.push({
-    "component": {
-        "accordion-1": {
-            "title": "Step by step",
-            "shownItems": [
-                "component.accordion-1-item-1"
-            ]
+ <script>
+  window.digitalData = {
+    "page" : {
+      "pageinfo":{
+        "pageName":"OYOT by lovekesh", 
+        "title":"OYOT",
+        "pageId":"1185"
+        
+      },
+      "Product" : {
+        "productInfo":{
+          "productName":"Tulip sapling",
+          "productColor":"Yellow",
+          "productPrice":"20"
         },
-        "accordion-1-item-1": {
-            "title": "Step One",
-            "parent": "component.accordion-1"
-        },
-        "accordion-1-item-2": {
-            "title": "Step Two",
-            "parent": "component.accordion-1"
+        "user": {
+          "userInfo":{
+            "userName":"John Cena",
+            "userId":"12313"
+          }
         }
+      }
     }
-});
+  }
+
+  </script>
+
+ 
+ 
+
  
  <script src="https://assets.adobedtm.com/e9875dd51dbe/ff9a451f30ef/launch-211d711a399a.min.js" async></script>
   <meta charset="utf-8" />
