--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,29 @@
 
 <head>
  <script>
-  window.digitalData = {
-    "page" : {
-      "pageinfo":{
-        "pageName":"OYOT by lovekesh", 
-        "title":"OYOT",
-        "pageId":"1185"
+ window.digitalData = {
+    page : {
+      pageinfo:{
+        pageName:"OYOT by lovekesh", 
+        title:"OYOT",
+        pageId:"1185"
         
       },
-      "Product" : {
-        "productInfo":{
-          "productName":"Tulip sapling",
-          "productColor":"Yellow",
-          "productPrice":"20"
+      Product : {
+        productInfo:{
+          productName:"Tulip sapling",
+          productColor:"Yellow",
+          productPrice:"20"
         },
-        "user": {
-          "userInfo":{
-            "userName":"John Cena",
-            "userId":"12313"
+        user: {
+          userInfo:{
+            userName:"John Cena",
+            userId:"12313"
           }
         }
       }
     }
   }
-
   </script>
 
  
