--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,26 @@
 
 <head>
  <script>
- window.digitalData = {
-    page : {
+  window.digitalData = {
+    Page : {
       pageinfo:{
         pageName:"OYOT by lovekesh", 
         title:"OYOT",
         pageId:"1185"
         
-      },
+      }},
       Product : {
         productInfo:{
           productName:"Tulip sapling",
           productColor:"Yellow",
           productPrice:"20"
-        },
-        user: {
+        }},
+        User: {
           userInfo:{
             userName:"John Cena",
             userId:"12313"
           }
-        }
-      }
-    }
-  }
+        }}
   </script>
 
  
