--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
   </script>
 
 <script src="https://assets.adobedtm.com/e9875dd51dbe/ff9a451f30ef/launch-211d711a399a.min.js" async></script>
- 
+  <h2>Media SDK (3.x Launch) Youtube Sample Player</h2>
+    <div id="player"></div>
+    <script type="text/javascript">_satellite.pageBottom();</script>
 
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
