--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,10 @@
 <script src="https://assets.adobedtm.com/6a203c8a0ff8/fe599fb4d2fc/launch-221d86bfa70b-development.min.js" async></script>
 
   <h2>Media SDK (3.x Launch) Youtube Sample Player</h2>
-    <div id="player"></div>
+    <div id="player"> 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/t0Q2otsqC4I?si=FcaNVfVKRZUftzvk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
     <script type="text/javascript">_satellite.pageBottom();</script>
 
   <meta charset="utf-8" />
