--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   <h2>Media SDK (3.x Launch) Youtube Sample Player</h2>
     <div id="player"> 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/t0Q2otsqC4I?si=FcaNVfVKRZUftzvk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/t0Q2otsqC4I?origin=https://main--lovekeshsite.netlify.app/" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
     <script type="text/javascript">_satellite.pageBottom();</script>
 
