--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
   </script>
 
  <!--<script src="https://assets.adobedtm.com/e9875dd51dbe/ff9a451f30ef/launch-211d711a399a.min.js" async></script>    -->
-<script src="https://assets.adobedtm.com/6a203c8a0ff8/fe599fb4d2fc/launch-221d86bfa70b-development.min.js" async></script>
+ <!--<script src="https://assets.adobedtm.com/6a203c8a0ff8/fe599fb4d2fc/launch-221d86bfa70b-development.min.js" async></script> -->
+
+<script src="https://assets.adobedtm.com/e9875dd51dbe/ff9a451f30ef/launch-3d2286d9fd39-development.min.js" async></script>
 
   <h2>Media SDK (3.x Launch) Youtube Sample Player</h2>
     <div id="player"> 
